welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:33: error: ')' expected but '}' found.
	}
        ^